--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -28,7 +28,7 @@
                     <a class="nav-link" href="{% url 'accounts:conditions' %}">Играть</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Лидеры</a>
+                    <a class="nav-link" href="{% url 'leaders' %}">Лидеры</a>
                 </li>
             </ul>
             {% if user.is_authenticated %}
