--- a/app/templates/play.html
+++ b/app/templates/play.html
@@ -170,7 +170,10 @@
 </div>
 
 
-{% endblock %} {% block script %} {{ block.super }}
+{% endblock %}
+
+{% block script %}
+{{ block.super }}
 
 <script src="{% static 'script/play_script.js' %}"></script>
 
