--- a/app/templates/leaders.html
+++ b/app/templates/leaders.html
@@ -14,6 +14,9 @@
         </tr>
     </thead>
     <tbody class="tbody-leaders">
+        {% if position %}
+        <p class="position-in-leaders">Вы на {{ position }} месте</p>
+        {% endif %}
         {% for user in users %}
             <tr class="user_row" data-user-id="{{ user.pk }}">
 
