--- a/app/static/css/master.css
+++ b/app/static/css/master.css
@@ -200,9 +200,9 @@ p {
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
-    border: 1px solid rgb(66, 66, 66, 0);
+    border: 1px solid rgba(66, 66, 66, 0);
     border-radius: 12px;
-    background: rgb(66, 66, 66, 0.7);
+    background: rgba(66, 66, 66, 0.7);
     padding-left: 2px;
     padding-right: 2px;
     cursor: pointer;
@@ -300,7 +300,7 @@ tbody tr {
     color: lightgray;
 }
 
-#budget, #changes, #deadline, #deadline_end, #tour, #tour_name {
+#budget, #changes, #deadline, #deadline_end, #tour, #tour_name, #user_name, #points {
     font-size: 0.75rem;
     font-weight: bold;
     color: black;
@@ -329,4 +329,8 @@ h5 {
 .position-in-leaders {
     text-align: right;
     margin-top: 3%;
+}
+
+.name-and-points-for-users-team {
+    margin-left: 16%;
 }
