--- a/app/static/css/master.css
+++ b/app/static/css/master.css
@@ -367,3 +367,22 @@ h5 {
 .games {
     margin-top: 5%;
 }
+
+
+h3 {
+    color: gray;
+}
+
+
+.alert ul li {
+    list-style-type: none;
+}
+
+.alert ul {
+    margin: 0;
+    padding: 0;
+}
+
+.forget-password {
+    margin-left: 3%;
+}
