--- a/app/templates/accounts/restore_password.html
+++ b/app/templates/accounts/restore_password.html
@@ -6,14 +6,18 @@
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-12 col-md-6">
-            <h1>Войдите</h1>
+            <h1>Восстановить пароль</h1>
+
 
             <form method="POST">
                 {% csrf_token %}
                 {{ form|crispy }}
+                {% if message %}
+                    <p style="color: red; font-weight: bolder; font-size: 80%;">{{ message }}</p>
+                {% endif %}
 
-                <input type="submit" value="Войти" class="btn btn-primary">
-                <a class="forget-password" href="#">Забыли пароль?</a>
+                <input type="submit" value="Восстановить" class="btn btn-primary">
+
             </form>
 
         </div>
