--- a/app/templates/accounts/signup.html
+++ b/app/templates/accounts/signup.html
@@ -4,11 +4,15 @@
 
 {% block content %}
 <div class="container">
-    <h1>Регистрация</h1>
-    <form method="POST">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <input type="submit" value="Sign Up" class="btn btn-default">
-    </form>
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-6">
+            <h1>Регистрация</h1>
+            <form method="POST">
+                {% csrf_token %}
+                {{ form|crispy }}
+                <input type="submit" value="Зарегистрироваться" class="btn btn-primary">
+            </form>
+        </div>
+    </div>
 </div>
 {% endblock %}
