--- a/app/templates/play.html
+++ b/app/templates/play.html
@@ -145,6 +145,15 @@
                     <p id="deadline_end"></p>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-6 hide">
+                    <ul id="last_3_result">
+                    Очки за ближайшие туры:
+
+                    </ul>
+                </div>
+            </div>
+
             <!--<ul class="players-list">-->
             <div class="row button-captain-div captain-players-button hide">
                 <div class="col-12 col-sm-6">
