--- a/app/static/css/master.css
+++ b/app/static/css/master.css
@@ -31,6 +31,16 @@ margin-bottom: 60px;
     background-color: #f5f5f5;
 }
 
+@media screen and (max-width: 991px) {
+    body {
+        margin-bottom: 0;
+    }
+
+    .footer {
+        position: static;
+    }
+}
+
 .text-center {
     color: gray;
     position: relative;
@@ -100,6 +110,7 @@ p {
     h2 {
         font-size: 26px;
     }
+
 }
 
 @media screen and (max-width: 767px) {
