--- a/app/templates/users_team.html
+++ b/app/templates/users_team.html
@@ -12,6 +12,16 @@
                 <div class="col-6">
                     <p id="points">Очки: {{ points }}</p>
                 </div>
+                {% if results %}
+                    <div class="col-6">
+                        <ul id="last_3_result">
+                        Очки за ближайшие туры:
+                        {% for key, value in results.items %}
+                            <li>{{ key }} тур: {{ value }}</li>
+                        {% endfor %}
+                        </ul>
+                    </div>
+                {% endif %}
             </div>
             <div class="field_wrapper">
                 <img class="field" src="{% static 'images/play/field.png' %}" alt="field">
