--- a/app/static/css/master.css
+++ b/app/static/css/master.css
@@ -1,6 +1,3 @@
-
-
-
 .asteriskField {
     display: none;
 }
@@ -439,3 +436,14 @@ h4 {
     font-weight: bold;
     color: black;
 }
+
+.banner {
+    margin: 5px;
+    max-width: 100%;
+    height: auto;
+}
+
+.banner-div {
+    text-align: center;
+}
+
