--- a/app/templates/play.html
+++ b/app/templates/play.html
@@ -1,4 +1,13 @@
 {% extends "base.html" %} {% load staticfiles %} {% block content %}
+{% if banners %}
+    <div class="container small_image">
+        <div class="banner-div">
+
+                <img class="banner" src="{{ banners.small_image.url }}" alt="small_banner">
+
+        </div>
+    </div>
+{% endif %}
 <div class="container">
     <div class="row play_page_row">
         <div class="col-12 col-lg-6" style="margin-bottom: 3%">
