--- a/app/templates/play.html
+++ b/app/templates/play.html
@@ -1,34 +1,35 @@
 {% extends "base.html" %} {% load staticfiles %} {% block content %}
-{% if banners %}
-    <div class="container small_image">
-        <div class="banner-div">
-            {% if banners.link %}
-                <a href="{{ banners.link }}" target="_blank"><img class="banner" src="{{ banners.small_image.url }}" alt="small_banner"></a>
-            {% else %}
-                <img class="banner" src="{{ banners.small_image.url }}" alt="small_banner">
-            {% endif %}
-        </div>
-    </div>
-    <div class="container medium_image">
-        <div class="banner-div">
-            {% if banners.link %}
-                <a href="{{ banners.link }}" target="_blank"><img class="banner" src="{{ banners.medium_image.url }}" alt="small_banner"></a>
-            {% else %}
-                <img class="banner" src="{{ banners.medium_image.url }}" alt="medium_banner">
-            {% endif %}
-        </div>
-    </div>
-    <div class="container large_image">
-        <div class="banner-div">
-            {% if banners.link %}
-                <a href="{{ banners.link }}" target="_blank"><img class="banner" src="{{ banners.large_image.url }}" alt="small_banner"></a>
-            {% else %}
-                <img class="banner" src="{{ banners.large_image.url }}" alt="large_banner">
-            {% endif %}
-        </div>
-    </div>
-{% endif %}
+
 <div class="container">
+    {% if banners %}
+        <div class="small_image">
+            <div class="banner-div">
+                {% if banners.link %}
+                    <a href="{{ banners.link }}" target="_blank"><img class="banner" src="{{ banners.small_image.url }}" alt="small_banner"></a>
+                {% else %}
+                    <img class="banner" src="{{ banners.small_image.url }}" alt="small_banner">
+                {% endif %}
+            </div>
+        </div>
+        <div class="medium_image">
+            <div class="banner-div">
+                {% if banners.link %}
+                    <a href="{{ banners.link }}" target="_blank"><img class="banner" src="{{ banners.medium_image.url }}" alt="small_banner"></a>
+                {% else %}
+                    <img class="banner" src="{{ banners.medium_image.url }}" alt="medium_banner">
+                {% endif %}
+            </div>
+        </div>
+        <div class="large_image">
+            <div class="banner-div">
+                {% if banners.link %}
+                    <a href="{{ banners.link }}" target="_blank"><img class="banner" src="{{ banners.large_image.url }}" alt="small_banner"></a>
+                {% else %}
+                    <img class="banner" src="{{ banners.large_image.url }}" alt="large_banner">
+                {% endif %}
+            </div>
+        </div>
+    {% endif %}
     <div class="row play_page_row">
         <div class="col-12 col-lg-6" style="margin-bottom: 3%">
             <div class="field_wrapper">
