--- a/app/templates/users_team.html
+++ b/app/templates/users_team.html
@@ -3,6 +3,35 @@
 {% load staticfiles%}
 
 <div class="container">
+    {% if banners %}
+        <div class="small_image">
+            <div class="banner-div">
+                {% if banners.link %}
+                    <a href="{{ banners.link }}" target="_blank"><img class="banner" src="{{ banners.small_image.url }}" alt="small_banner"></a>
+                {% else %}
+                    <img class="banner" src="{{ banners.small_image.url }}" alt="small_banner">
+                {% endif %}
+            </div>
+        </div>
+        <div class="medium_image">
+            <div class="banner-div">
+                {% if banners.link %}
+                    <a href="{{ banners.link }}" target="_blank"><img class="banner" src="{{ banners.medium_image.url }}" alt="small_banner"></a>
+                {% else %}
+                    <img class="banner" src="{{ banners.medium_image.url }}" alt="medium_banner">
+                {% endif %}
+            </div>
+        </div>
+        <div class="large_image">
+            <div class="banner-div">
+                {% if banners.link %}
+                    <a href="{{ banners.link }}" target="_blank"><img class="banner" src="{{ banners.large_image.url }}" alt="small_banner"></a>
+                {% else %}
+                    <img class="banner" src="{{ banners.large_image.url }}" alt="large_banner">
+                {% endif %}
+            </div>
+        </div>
+    {% endif %}
     <div class="row justify-content-center">
         <div class="col-12 col-lg-6" style="margin-bottom: 3%; margin-top: 3%;">
             <div class="row name-and-points-for-users-team">
