create off season model

--- a/app/templates/freeze_and_count.html
+++ b/app/templates/freeze_and_count.html
@@ -55,7 +55,7 @@
         </div>
         <p id="capcha-mistake" class="hide">Капча неправильная.</p>
         <p>Здесь можно завершить сезон после того, как все игры сыграны. Но не раньше, иначе произойдёт непоправимое!
-        Чтобы обезопасить от случайного нажатия предусмотрена капча: 123.</p>
+        Чтобы обезопасить от случайного нажатия предусмотрена капча: 123. Завершать сезон нужно, когда идёт последний тур сезона.</p>
         <hr>
         <div class="row">
             <div class="d-inline-flex">
