--- a/app/templates/freeze_and_count.html
+++ b/app/templates/freeze_and_count.html
@@ -54,6 +54,7 @@
             </div>
         </div>
         <p id="capcha-mistake" class="hide">Капча неправильная.</p>
+        <p id="off-season-message" class="hide">Сезон закончен! УРАААААА!</p>
         <p>Здесь можно завершить сезон после того, как все игры сыграны. Но не раньше, иначе произойдёт непоправимое!
         Чтобы обезопасить от случайного нажатия предусмотрена капча: 123. Завершать сезон нужно, когда идёт последний тур сезона.</p>
         <hr>
@@ -64,6 +65,7 @@
                 </div>
             </div>
         </div>
+        <p id="start-season-message" class="hide">Сезон начинается, готовьте булки!</p>
         <p>Нажатие этой кнопки начинает сезон. Нажать её можно только в межсезонье. Будьте аккуратны! До того, как она нажата пользователь не сможет сформировать команду.
         Но после - сможет!</p>
         <hr>
