--- a/app/templates/play.html
+++ b/app/templates/play.html
@@ -130,10 +130,11 @@
             <table class="table table_players_all">
                 <thead>
                     <tr>
-                        <th scope="col" style="width: 33.34%">Фамилия</th>
-                        <th scope="col" style="width: 16.66%; padding-left: 0%;" class="cell_centerize">Позиция</th>
-                        <th scope="col" style="width: 16.66%" class="cell_centerize">Цена</th>
-                        <th scope="col" style="width: 33.34%">Клуб</th>
+                        <th scope="col" style="width: 30.00%">Фамилия</th>
+                        <th scope="col" style="width: 13.33%; padding-left: 0%;" class="cell_centerize">Позиция</th>
+                        <th scope="col" style="width: 13.33%" class="cell_centerize">Цена</th>
+                        <th scope="col" style="width: 30.01%">Клуб</th>
+                        <th scope="col" style="width: 13.33%" class="cell_centerize">Очки</th>
                     </tr>
                 </thead>
                 <tbody class="tbody-all-players">
