1. change success screen after sign up 2. change team_name screen

--- a/app/templates/accounts/teamname.html
+++ b/app/templates/accounts/teamname.html
@@ -4,7 +4,8 @@
 
 {% block content %}
 <div class="container">
-    <h1>Введите имя своей команды:</h1>
+    <h1>Придумайте имя для своей команды</h1>
+    <p>После этого, можно будет приступить к выбору игроков.</p>
     <form method="POST">
         {% csrf_token %}
         {{ form|crispy }}
