change some button style

--- a/app/templates/accounts/teamname.html
+++ b/app/templates/accounts/teamname.html
@@ -9,7 +9,7 @@
     <form method="POST">
         {% csrf_token %}
         {{ form|crispy }}
-        <input type="submit" value="Сохранить" class="btn btn-default">
+        <input type="submit" value="Сохранить" class="btn btn-primary">
     </form>
 </div>
 {% endblock %}
