--- a/app/templates/play.html
+++ b/app/templates/play.html
@@ -93,7 +93,7 @@
                         <!--</div>-->
                     </div>
                     <div class="buttons">
-                        <button type="button" id="save_team" class="btn btn-primary btn-sm" disabled>Сохранить</button>
+                        <button type="button" id="save_team" class="btn btn-danger btn-sm" disabled>Сохранить</button>
                         <button type="button" id="cancel_transfers" class="btn btn-secondary hide btn-sm">Отменить замены</button>
                     </div>
                 </div>
