--- a/app/templates/play.html
+++ b/app/templates/play.html
@@ -183,10 +183,7 @@
             </div>
             <div class="row">
                 <div class="col-6 hide">
-                    <ul id="last_3_result">
-                    Очки за ближайшие туры:
-
-                    </ul>
+                    <ul id="last_3_result">Очки за ближайшие туры:</ul>
                 </div>
             </div>
 
